<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/s1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/lista"
                android:textSize="24sp"
                app:fontFamily="sans-serif-black" />

            <EditText
                android:id="@+id/cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/barra"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/b1"
                android:text="@string/buscar"
                android:textSize="18sp" />

            <Button
                android:id="@+id/limpiar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/b1"
                android:text="@string/limpiar"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/lista"
                android:layout_width="match_parent"
                android:layout_height="315dp"
                android:background="@drawable/g1"
                android:choiceMode="singleChoice"
                android:longClickable="false"></ListView>

            <Button
                android:id="@+id/nuevo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/b1"
                android:text="@string/nuevo"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/l3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cartera"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/cartera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pres"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prestado"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/prestado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/res"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recibido"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/recibido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="number" />
            </LinearLayout>

            <Button
                android:id="@+id/guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/b1"
                android:text="@string/guardar"
                android:textSize="18sp" />

            <Button
                android:id="@+id/compartir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/b1"
                android:text="@string/compartir"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/s2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/l4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nomb"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nombre"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/val"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/valor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/valor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cuos"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cuotas"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/cuotas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/vac"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/valorc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/vacuo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cp"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cuopa"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/cuopa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sal"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/saldo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/saldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="number" />
            </LinearLayout>

            <Button
                android:id="@+id/realizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/b1"
                android:text="@string/realizar" />

            <Button
                android:id="@+id/iniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/b1"
                android:text="@string/iniciop" />

            <Button
                android:id="@+id/registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/b1"
                android:text="@string/registro" />

            <Button
                android:id="@+id/atras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/b1"
                android:text="@string/atras" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>